--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT =5000
-MONGO_URI= mongodb://127.0.0.1:27017/inventory_managment
+MONGO_URI= mongodb+srv://<db_username>:<db_password>@cluster0.l4ea1pr.mongodb.net/inventory_managment?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET = jwtsecretKey12345####55@@@
